@@ -12,6 +12,8 @@
 	added SQLRDEBUG=on/off environment variable to enable/disable
 		client-side debug
 	added bind variable support to sqlrsh
+	added selectDatabase/getCurrentDatabase methods and support in sqlrsh
+	added errorMessage method at connection level
 
 0.43 - updated ruby code build to take sitearch into account during includes
 	updated ruby code to map STR2CSTR to StringValuePtr for ruby 1.9
